Added SRE base constructor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(getMean)
 export(getPrecision)
 export(head)
 export(initFEbasis)
+export(initGRBFbasis)
 export(kappa_from_l)
 export(l_from_kappa)
 export(link)
