Big Commit before I start making changes to BAU default as part of SRE model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(validate)
 exportMethods("[<-")
 import(Matrix)
 import(ggplot2)
+import(parallel)
 import(sp)
 import(spam)
 importClassesFrom(gpclib,gpc.poly)
