--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ import(Matrix)
 import(dplyr)
 import(ggplot2)
 import(gstat)
+import(methods)
 import(parallel)
 import(sp)
 importFrom(INLA,inla.mesh.2d)
