--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(SRE)
 export(SRE.fit)
 export(SRE.predict)
 export(SpatialPolygonsDataFrame_to_df)
+export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
 export(distance)
@@ -30,6 +31,7 @@ import(sp)
 importFrom(PBSmapping,clipPolys)
 importFrom(akima,interp)
 importFrom(digest,digest)
+importFrom(doParallel,registerDoParallel)
 importFrom(fields,fields.rdist.near)
 importFrom(fields,rdist)
 importFrom(fields,rdist.earth)
