--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(SpatialPolygonsDataFrame_to_df)
 export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
+export(dggrid_gen_to_df)
 export(distance)
 export(draw_world)
 export(eval_basis)
@@ -25,6 +26,7 @@ import(Matrix)
 import(dplyr)
 import(ggplot2)
 import(gstat)
+import(mapproj)
 import(methods)
 import(parallel)
 import(sp)
