--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(draw_world)
 export(eval_basis)
 export(manifold)
 export(nbasis)
+export(new_opts_FRK)
 export(opts_FRK)
 export(plane)
 export(radial_basis)
