--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(SRE)
 export(SRE.fit)
 export(SRE.predict)
 export(SpatialPolygonsDataFrame_to_df)
+export(auto_BAU)
 export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
