--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,17 +6,19 @@ Date: 2015-05-15
 Author: Andrew Zammit-Mangion
 Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
 VignetteBuilder: knitr
-Description: Fixed Rank Kriging
+Description: This package implements fixed rank kriging, a tool used for spatial modelling and prediction with large detasets. The approach, discussed in Cressie and Johannesson (2008), decomposes the field, and hence the covariance function, using a fixed set of n basis functions, where n is typically much smaller than the number of data points (or polygons) m. The method naturally allows for non-stationary, anisotropic covariance functions and the use of observations with varying support (with known error variance). The projected field is typically the integral component of the spatial random effects (SRE) model, the central component of this package. The package FRK provides a means to model, fit and predict with the SRE with relative ease. The work is based on Cressie, N., & Johannesson, G. (2008). Fixed rank kriging for very large spatial data sets. Journal of the Royal Statistical Society: Series B (Statistical Methodology), 70, 209-226.
 BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
-    R (>= 3.1)
+    R (>= 3.2)
 Suggests:
     testthat,
     reshape2,
     shapefiles,
     knitr,
-    INLA,
     zoo
+Enhances:
+    INLA,
+    Rhipe
 Imports:
     methods,
     Matrix,
@@ -29,7 +31,6 @@ Imports:
     fields,
     plyr,
     PBSmapping,
-    akima,
     parallel,
     doParallel,
     sp,
