--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,7 @@ notifications:
     on_success: change
     on_failure: change
 
-# For code coverage
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh github_package jimhester/covr
-
-script: ./travis-tool.sh run_tests
- 
-after_failure:
-  - ./travis-tool.sh dump_logs
-
+r_github_packages:
+  - jimhester/covr
 after_success:
-  - Rscript -e 'library(covr);coveralls()'
-
-
-# r_github_packages:
-#   - jimhester/covr
+  - Rscript -e 'library(covr);codecov()'
