--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ r_github_packages:
   - jimhester/covr
 after_success:
   - Rscript -e 'library(covr);codecov()'
+  - Rscript -e 'library(covr);coveralls()'
