--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,5 @@ r_github_packages:
 after_success:
   - Rscript -e 'library(covr);codecov()'
   - Rscript -e 'library(covr);coveralls()'
+
+sudo: false
