Introduced spatio-temporal FRK, still clunky but operational. Do not support estimation of observation error and polygon observation data (yet)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(LinePlotTheme)
 export(SRE)
 export(SRE.fit)
 export(SRE.predict)
+export(STplane)
+export(STsphere)
 export(SpatialPolygonsDataFrame_to_df)
 export(auto_BAUs)
 export(auto_basis)
@@ -15,6 +17,7 @@ export(distance)
 export(draw_world)
 export(eval_basis)
 export(gc_dist)
+export(gc_dist_time)
 export(manifold)
 export(nbasis)
 export(opts_FRK)
@@ -22,7 +25,9 @@ export(plane)
 export(radial_basis)
 export(real_line)
 export(show_basis)
+export(sp_to_ST_basis)
 export(sphere)
+export(timeline)
 export(type)
 import(Matrix)
 import(dplyr)
@@ -32,6 +37,7 @@ import(mapproj)
 import(methods)
 import(parallel)
 import(sp)
+import(spacetime)
 importFrom(PBSmapping,clipPolys)
 importFrom(digest,digest)
 importFrom(doParallel,registerDoParallel)
