--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ notifications:
 
 install:
     - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
+    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
 r_binary_packages:
   - knitr
