--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ notifications:
     on_success: change
     on_failure: change
 
-install:
-    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
-    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
+#install:
+#    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
+#    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
 r_binary_packages:
   - knitr
