--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ notifications:
 #    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 #    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
+install:
+  - ./travis-tool.sh github_package jimhester/covr
+
 r_binary_packages:
   - knitr
 
