--- a/.travis.yml
+++ b/.travis.yml
@@ -17,18 +17,20 @@ notifications:
 #    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 #    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
-install:
-  - ./travis-tool.sh github_package jimhester/covr
-
 r_binary_packages:
+  - XML
   - knitr
 
 r_github_packages:
   - jimhester/covr
+  - hadley/testthat
+  - jimhester/lintr
 
-after_success:
+#after_success:
 #  - Rscript -e 'library(covr);codecov()'
 #  - Rscript -e 'library(covr);coveralls()'
 #   run test coverage only for the travis build
-  - "[ $TARGET = travis ] && Rscript -e 'covr::coveralls()'"
+#  - "[ $TARGET = travis ] && Rscript -e 'covr::coveralls()'"
+after_success:
+  - Rscript -e 'covr::codecov()'
 
