Added more test functions Reduced version requirement to 3.1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(SRE.predict)
 export(STplane)
 export(STsphere)
 export(SpatialPolygonsDataFrame_to_df)
+export(TensorP)
 export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
@@ -31,6 +32,7 @@ export(timeline)
 export(type)
 import(Matrix)
 import(dplyr)
+import(foreach)
 import(ggplot2)
 import(gstat)
 import(mapproj)
