--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ notifications:
     on_success: change
     on_failure: change
 
-#install:
+install:
+     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 #    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 #    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
+
 
 r_binary_packages:
   - XML
