--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ notifications:
     on_success: change
     on_failure: change
 
-install:
-     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
+#install:
+#     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 #    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 #    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
@@ -27,6 +27,7 @@ r_github_packages:
   - jimhester/covr
   - hadley/testthat
   - jimhester/lintr
+  - grantbrown/inla
 
 #after_success:
 #  - Rscript -e 'library(covr);codecov()'
