--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(sp_to_ST_basis)
 export(sphere)
 export(timeline)
 export(type)
+import(Hmisc)
 import(Matrix)
 import(dplyr)
 import(foreach)
@@ -40,6 +41,7 @@ import(methods)
 import(parallel)
 import(sp)
 import(spacetime)
+import(zoo)
 importFrom(PBSmapping,clipPolys)
 importFrom(digest,digest)
 importFrom(doParallel,registerDoParallel)
