Some small changes -- Build failing in tests. Also reverted YAML to previous version

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ language: r
 warnings_are_errors: false
 sudo: required
 
-#env:
-# global:
-#   - CRAN: http://cran.rstudio.com
-
 env:
-  global:
-    - NOT_CRAN=true
-before_install: echo "options(repos = c(CRAN='http://cran.rstudio.com'))" > ~/.Rprofile
+ global:
+   - CRAN: http://cran.rstudio.com
+
+#env:
+#  global:
+#    - NOT_CRAN=true
+#before_install: echo "options(repos = c(CRAN='http://cran.rstudio.com'))" > ~/.Rprofile
 
 
 notifications:
