--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,6 @@ import(sp)
 import(spacetime)
 import(zoo)
 importFrom(PBSmapping,clipPolys)
-importFrom(digest,digest)
 importFrom(doParallel,registerDoParallel)
 importFrom(fields,fields.rdist.near)
 importFrom(fields,rdist)
@@ -59,4 +58,4 @@ importFrom(plyr,rbind.fill)
 importFrom(scales,brewer_pal)
 importFrom(scales,gradient_n_pal)
 importFrom(scales,muted)
-useDynLib(FRK)
+useDynLib(FRK, digest_impl=digest)
