--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,8 @@ Imports:
     doParallel,
     sp,
     spacetime,
-    mapproj
+    mapproj,
+    digest
 License: GPL (>= 2)
 NeedsCompilation: yes
 LazyData: true
