--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,3 +6,11 @@ bigstudies
 ^\.travis.yml$
 ^\.\.Rcheck$
 ^\.git$
+^\inla-mesher-functions
+^R/rhipe_fns.R$
+.log$
+.bbl$
+.concordance.tex$
+.synctex.gz$
+^README.md$
+^FRK_
