--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,20 +6,18 @@ Date: 2015-01-21
 Author: Andrew Zammit-Mangion
 Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
 VignetteBuilder: knitr
-Description: Fixed rank kriging is a tool used for
-    spatial modelling and prediction with large detasets. The approach,
-    discussed in Cressie and Johannesson (2008), decomposes the field, and
-    hence the covariance function, using a fixed set of n basis functions,
-    where n is typically much smaller than the number of data points (or
-    polygons) m. The method naturally allows for non-stationary, anisotropic
-    covariance functions and the use of observations with varying support (with
-    known error variance). The projected field is typically the integral
-    component of the spatial random effects (SRE) model, the central component
-    of this package. The package FRK provides a means to model, fit and predict
-    with the SRE with relative ease. The work is based on Cressie, N., &
-    Johannesson, G. (2008). Fixed rank kriging for very large spatial data
-    sets. Journal of the Royal Statistical Society: Series B (Statistical
-    Methodology), 70, 209-226.
+Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal
+    modelling and prediction with large datasets. The approach, discussed in
+    Cressie and Johannesson (2008), decomposes the field, and hence the covariance
+    function, using a fixed set of n basis functions, where n is typically
+    much smaller than the number of data points (or polygons) m. The method
+    naturally allows for non-stationary, anisotropic covariance functions and
+    the use of observations with varying support (with known error variance). The
+    projected field is a key building block of the spatial random effects (SRE) model,
+    on which this package is based. The package FRK provides  helper functions
+    to model, fit, and predict using an SRE with relative ease. Reference: Cressie,
+    N., & Johannesson, G. (2008). Fixed rank kriging for very large spatial data
+    sets. Journal of the Royal Statistical Society: Series B, 70, 209-226.
 BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.1)
@@ -32,7 +30,6 @@ Suggests:
     splancs,
     INLA,
     rgeos,
-    maps,
     covr
 Enhances:
     dggrids,
