Changed "radial basis" to "local basis" and fixed auto_basis documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,11 +21,11 @@ export(draw_world)
 export(eval_basis)
 export(gc_dist)
 export(gc_dist_time)
+export(local_basis)
 export(manifold)
 export(nbasis)
 export(opts_FRK)
 export(plane)
-export(radial_basis)
 export(real_line)
 export(show_basis)
 export(sp_to_ST_basis)
