--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,13 +22,14 @@ BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.1)
 Suggests:
+    covr,
     testthat,
     gstat,
-    knitr,
+    rgeos,
     splancs,
     INLA,
-    covr,
-    rgeos
+    knitr,
+    parallel
 Enhances:
     dggrids,
 Imports:
@@ -37,10 +38,8 @@ Imports:
     ggplot2,
     dplyr,
     plyr,
-    parallel,
     sp,
-    spacetime,
-    digest
+    spacetime
 License: GPL (>= 2)
 NeedsCompilation: yes
 LazyData: true
