Fixing documentation due to new version of Roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(STplane)
 export(STsphere)
 export(SpatialPolygonsDataFrame_to_df)
 export(TensorP)
+export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
 export(distance)
