--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(manifold)
 export(nbasis)
 export(opts_FRK)
 export(plane)
+export(radial_basis)
 export(real_line)
 export(show_basis)
 export(sp_to_ST_basis)
