--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     the number of data points (or polygons) m. The method naturally allows for
     non-stationary, anisotropic covariance functions and the use of observations
     with varying support (with known error variance). The projected field is a
-    key building block of the spatial random effects (SRE) model, on which this
+    key building block of the Spatial Random Effects (SRE) model, on which this
     package is based. The package FRK provides helper functions to model, fit, and
     predict using an SRE with relative ease. Reference: Cressie, N., & Johannesson,
     G. (2008). Fixed rank kriging for very large spatial data sets. Journal of the
