Put INLA and splancs back in Suggets, parts of INLA cannot really be included in package easily because of use of binary files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Suggests:
     knitr,
     parallel,
     gstat,
-    rgeos
+    rgeos,
+    INLA,
+    splancs
 Enhances: dggrids,
 Imports:
     methods,
