--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ notifications:
     on_success: change
     on_failure: change
 
-#install:
+install:
+- ./travis-tool.sh install_github hadley/devtools
 #     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 #    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 #    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
