Trying to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,11 @@ notifications:
     on_success: change
     on_failure: change
 
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+
 install:
 - ./travis-tool.sh install_github hadley/devtools
 #     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
