--- a/.travis.yml
+++ b/.travis.yml
@@ -19,19 +19,15 @@ notifications:
     on_success: change
     on_failure: change
 
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-- ./travis-tool.sh install_github hadley/devtools
-#     - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
-#    - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
-#    - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
+# install:
+# - Rscript -e "install.packages('devtools',repos='http://cran.us.r-project.org')"
+# - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
+# - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
+# - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
 
 
 r_binary_packages:
+  - devtools
   - XML
   - knitr
 
