--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ notifications:
     on_failure: change
 
 install:
-- Rscript -e "install.packages('devtools',repos='http://cran.us.r-project.org')"
+  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
 # - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 # - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 # - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
