--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 #env:
 #  global:
 #    - NOT_CRAN=true
-before_install: echo "options(repos = c(CRAN='http://cran.rstudio.com'))" > ~/.Rprofile
+#before_install: echo "options(repos = c(CRAN='http://cran.rstudio.com'))" > ~/.Rprofile
 
 
 notifications:
@@ -19,9 +19,16 @@ notifications:
     on_success: change
     on_failure: change
 
-# install:
-# - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
-# - Rscript -e 'install.packages("knitr", repos = "http://cran.rstudio.com")'
+install:
+- Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("knitr", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("dplyr", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("sp", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("spacetime", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("digest", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("plyr", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("dplyr", repos = "http://cran.rstudio.com")'
+
 # - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 # - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 # - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
