--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,12 @@ install:
 - Rscript -e 'install.packages("digest", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("plyr", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("dplyr", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("ggplot2", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("splancs", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("mapproj", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("rgeos", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("gstat", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("testthat", repos = "http://cran.rstudio.com")'
 
 # - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 # - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
