--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ install:
 - Rscript -e 'install.packages("rgeos", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("gstat", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("testthat", repos = "http://cran.rstudio.com")'
-
+- Rscript -e 'devtools::install_github("andrewzm/inla")'
+- Rscript -e 'devtools::install_github("jimhester/covr")'
+- Rscript -e 'devtools::install_github("jimhester/lintr")'
 # - Rscript -e "install.packages('INLA', repos='http://www.math.ntnu.no/inla/R/stable')"
 # - Rscript -e "if (!require('covr')) install.packages('covr',repos='http://cran.us.r-project.org')"
 # - Rscript -e "if (!require('knitr')) install.packages('knitr',repos='http://cran.us.r-project.org')"
@@ -44,11 +46,11 @@ r_binary_packages:
   - XML
   - knitr
 
-r_github_packages:
-  - jimhester/covr
-  - hadley/testthat
-  - jimhester/lintr
-  - andrewzm/inla
+#r_github_packages:
+#  - jimhester/covr
+#  - hadley/testthat
+#  - jimhester/lintr
+#  - andrewzm/inla
 
 #after_success:
 #  - Rscript -e 'library(covr);codecov()'
