--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ import(methods)
 import(parallel)
 import(sp)
 import(spacetime)
+importFrom(Rcpp,cppFunction)
 importFrom(digest,digest)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
