--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(round,POSIXt)
 S3method(trunc,POSIXt)
 export(EmptyTheme)
 export(Euclid_dist)
+export(FRK)
 export(LinePlotTheme)
 export(SRE)
 export(SRE.fit)
@@ -23,6 +24,7 @@ export(gc_dist_time)
 export(local_basis)
 export(manifold)
 export(nbasis)
+export(nres)
 export(opts_FRK)
 export(plane)
 export(radial_basis)
