- Added distr and measure to NAMESPACE - Created a constructor for measure - Now we export distR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(TensorP)
 export(auto_BAUs)
 export(auto_basis)
 export(df_to_SpatialPolygons)
+export(distR)
 export(distance)
 export(draw_world)
 export(eval_basis)
@@ -23,6 +24,7 @@ export(gc_dist)
 export(gc_dist_time)
 export(local_basis)
 export(manifold)
+export(measure)
 export(nbasis)
 export(nres)
 export(opts_FRK)
