--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,7 +45,24 @@ import(sp)
 import(spacetime)
 importFrom(Rcpp,cppFunction)
 importFrom(digest,digest)
+importFrom(grDevices,chull)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,rbind.fill)
+importFrom(stats,.getXlevels)
+importFrom(stats,coefficients)
+importFrom(stats,dist)
+importFrom(stats,kmeans)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,model.extract)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,na.fail)
+importFrom(stats,optim)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,terms)
+importFrom(stats,var)
+importFrom(utils,data)
 useDynLib(FRK)
