--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ import(methods)
 import(parallel)
 import(sp)
 import(spacetime)
+importFrom(Hmisc,ceil)
 importFrom(Hmisc,round.POSIXt)
 importFrom(Hmisc,trunc.POSIXt)
 importFrom(Rcpp,cppFunction)
