--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -7,6 +7,7 @@ bigstudies
 ^\.\.Rcheck$
 ^\.git$
 ^inla-mesher-functions
+^issues
 ^PBSmapping
 ^R/rhipe_fns.R$
 .log$
@@ -23,4 +24,3 @@ bigstudies
 rhipe_fns.R$
 ^Permissions
 ^pres
-.Rnw$
