--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,4 +66,4 @@ importFrom(stats,sd)
 importFrom(stats,terms)
 importFrom(stats,var)
 importFrom(utils,data)
-useDynLib(FRK)
+useDynLib(FRK, .registration=TRUE)
