- Introduction to v0.1.2. There are too many changes to document. The code was went through line by line, and commented thoroughly. Some objects, such as timeline, have been removed because they were redundant. Duplicated code has also been removed. An important improvement was the binning of the STFDF. Now all time has to be POSIXct.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,12 +9,13 @@ bigstudies
 ^inla-mesher-functions
 ^issues
 ^PBSmapping
-^R/rhipe_fns.R$
 .log$
 .bbl$
 .concordance.tex$
 .synctex.gz$
 ^README.md$
+^devel/devel.R$
+^R/rhipe_fns.R$
 ^cran-comments.md$
 ^\.\.pdf$
 ^paper
