- Added devel folder - Imported rnorm from stats - Added xlims and ylims to BAUs - Made lik computation more efficient - Made interpolation near origin default variogram fitting choice (linear is second, exp is third) - Moved est_obs_variance to SREutils.R - Added function .formula_no_covars which takes a formula with covariates and returns a formula with only intercept term. Added test for it - Added tests for xlims and ylims

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,na.fail)
 importFrom(stats,optim)
+importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,terms)
