Final minor changes for v0.1.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(plyr,rbind.fill)
 importFrom(stats,.getXlevels)
 importFrom(stats,coefficients)
 importFrom(stats,dist)
+importFrom(stats,formula)
 importFrom(stats,kmeans)
 importFrom(stats,lm)
 importFrom(stats,median)
