--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: FRK
 Type: Package
 Title: Fixed Rank Kriging
 Version: 0.1.2
-Date: 2017-03-06
+Date: 2017-04-21
 Authors@R: c(
     person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")),
     person("Timothy", "Davis", , "davis@tamu.edu", role = "ctb"),
@@ -13,15 +13,14 @@ Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
 VignetteBuilder: knitr
 Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     and prediction with large datasets. The approach, discussed in Cressie and
-    Johannesson (2008), decomposes the field, and hence the covariance function,
-    using a fixed set of n basis functions, where n is typically much smaller than
-    the number of data points (or polygons) m. The method naturally allows for
-    non-stationary, anisotropic covariance functions and the use of observations
-    with varying support (with known error variance). The projected field is a key
-    building block of the Spatial Random Effects (SRE) model, on which this package
-    is based. The package FRK provides helper functions to model, fit, and predict
-    using an SRE with relative ease. Reference: Cressie, N. and Johannesson, G.
-    (2008) <DOI:10.1111/j.1467-9868.2007.00633.x>.
+    Johannesson (2008) <DOI:10.1111/j.1467-9868.2007.00633.x>, decomposes the field, 
+    and hence the covariance function, using a fixed set of n basis functions, 
+    where n is typically much smaller than the number of data points (or polygons) m. 
+    The method naturally allows for non-stationary, anisotropic covariance functions 
+    and the use of observations with varying support (with known error variance). The 
+    projected field is a key building block of the Spatial Random Effects (SRE) model, 
+    on which this package is based. The package FRK provides helper functions to model, 
+    fit, and predict using an SRE with relative ease.
 BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.1)
