Update NAMESPACE and documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(opts_FRK)
 export(plane)
 export(radial_basis)
 export(real_line)
+export(remove_basis)
 export(show_basis)
 export(sphere)
 export(type)
