Added fit_info(S) function to get fitting results from SRE.fit()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(draw_world)
 export(eval_basis)
 export(gc_dist)
 export(gc_dist_time)
+export(info_fit)
 export(local_basis)
 export(manifold)
 export(measure)
