- Changed Hmisc dependency (Hmisc 4.1 has changed exports) - Exported loglik funtion - Added support for computing covariances and checks - Exported info_fit - Used tcrossprod in cholsolveAQinvAT - In geometry.R updated the Hmisc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(gc_dist)
 export(gc_dist_time)
 export(info_fit)
 export(local_basis)
+export(loglik)
 export(manifold)
 export(measure)
 export(nbasis)
@@ -40,6 +41,7 @@ export(type)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(info_fit)
 import(Matrix)
 import(dplyr)
 import(ggplot2)
@@ -48,8 +50,8 @@ import(parallel)
 import(sp)
 import(spacetime)
 importFrom(Hmisc,ceil)
-importFrom(Hmisc,round.POSIXt)
-importFrom(Hmisc,trunc.POSIXt)
+importFrom(Hmisc,roundPOSIXt)
+importFrom(Hmisc,truncPOSIXt)
 importFrom(Rcpp,cppFunction)
 importFrom(digest,digest)
 importFrom(grDevices,chull)
