Added function coef() that retrieves estimated coefficients Replaced pred_polys with newdata Added spatio-temporal change of support in SRE.predict Added functionality to release covariances

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(SpatialPolygonsDataFrame_to_df)
 export(TensorP)
 export(auto_BAUs)
 export(auto_basis)
+export(coef)
 export(df_to_SpatialPolygons)
 export(distR)
 export(distance)
