--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ import(methods)
 import(parallel)
 import(sp)
 import(spacetime)
+import(sparseinv)
 importFrom(Hmisc,ceil)
 importFrom(Hmisc,roundPOSIXt)
 importFrom(Hmisc,truncPOSIXt)
