--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,7 @@ Title: Fixed Rank Kriging
 Version: 0.2
 Date: 2018-01-12
 Authors@R: c(
-    person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")),
-    person("Timothy", "Davis", , "davis@tamu.edu", role = "ctb"),
-    person("Patrick","Amestoy", ,"Patrick.Amestoy@enseeiht.fr", role = "ctb"),
-    person("Iain","Duff", ,"iain.duff@stfc.ac.uk", role = "ctb"),
-	person("John K.","Reid", ,"John.Reid@stfc.ac.uk", role = "ctb"))
+    person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")))
 Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
 VignetteBuilder: knitr
 Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
@@ -48,6 +44,7 @@ Imports:
     Rcpp (>= 0.12.12),
     sp,
     spacetime,
+    sparseinv,
     stats,
     utils
 Enhances: dggrids
