Changed to Version 0.2.1 Moved dggrids to Suggests Added demos Exporting the predict function Updated vignette Changed SRE.predict to predict everywhere

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(nbasis)
 export(nres)
 export(opts_FRK)
 export(plane)
+export(predict)
 export(radial_basis)
 export(real_line)
 export(remove_basis)
@@ -43,6 +44,7 @@ exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
 exportMethods(info_fit)
+exportMethods(predict)
 import(Matrix)
 import(dplyr)
 import(ggplot2)
