--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: FRK
 Type: Package
 Title: Fixed Rank Kriging
-Version: 0.2
+Version: 0.2.1
 Date: 2018-01-12
 Authors@R: c(
     person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")))
@@ -22,6 +22,7 @@ Depends:
     R (>= 3.1)
 Suggests:
     covr,
+    dggrids,
     gstat,
     INLA,
     knitr,
@@ -47,7 +48,6 @@ Imports:
     sparseinv,
     stats,
     utils
-Enhances: dggrids
 Additional_repositories: https://andrewzm.github.io/dggrids-repo, 
                          http://www.math.ntnu.no/inla/R/stable
 License: GPL (>= 2)
