--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
 - Rscript -e 'install.packages("testthat", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("spdep", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("verification", repos = "http://cran.rstudio.com")'
+- Rscript -e 'devtools::install_github("andrewzm/dggrids")'
 - Rscript -e 'devtools::install_github("andrewzm/inla")'
 - Rscript -e 'devtools::install_github("jimhester/covr")'
 - Rscript -e 'devtools::install_github("jimhester/lintr")'
