--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
 
 before_install:
   - sudo apt-get -y install libudunits2-dev
-
+  - sudo apt-get -y install libgdal-dev
 notifications:
   email:
     on_success: change
