--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     fit, and predict using an SRE with relative ease.
 BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
-    R (>= 3.2.0)
+    R (>= 3.2.0),
+    TMB, 
+    RcppEigen
 Suggests:
     covr,
     dggrids,
@@ -54,4 +56,4 @@ License: GPL (>= 2)
 NeedsCompilation: yes
 LazyData: true
 RoxygenNote: 6.0.1
-LinkingTo: Rcpp
+LinkingTo: Rcpp, TMB, RcppEigen
