--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ install:
 - Rscript -e 'install.packages("gstat", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("Hmisc", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("testthat", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("TMB", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("RcppEigen", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("spdep", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("verification", repos = "http://cran.rstudio.com")'
 - Rscript -e 'devtools::install_github("andrewzm/dggrids")'
