Description and .check_args2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(Basis)
 export(EmptyTheme)
 export(Euclid_dist)
 export(FRK)
+export(FRKTMB_fit)
+export(FRKTMB_pred)
 export(LinePlotTheme)
 export(SRE)
 export(SRE.fit)
@@ -46,6 +48,9 @@ exportMethods("$<-")
 exportMethods("data.frame<-")
 exportMethods(predict)
 import(Matrix)
+import(Rcpp)
+import(RcppEigen)
+import(TMB)
 import(dplyr)
 import(ggplot2)
 import(methods)
@@ -81,4 +86,5 @@ importFrom(stats,terms)
 importFrom(stats,time)
 importFrom(stats,var)
 importFrom(utils,data)
+useDynLib(FRK)
 useDynLib(FRK, .registration=TRUE)
