--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     both Gaussian and non-Gaussian data.
 BugReports: http://github.com/andrewzm/FRK/issues
 Depends:
-    R (>= 3.2.0),
+    R (>= 3.2.0)
 Suggests:
     covr,
     dggrids,
@@ -34,7 +34,9 @@ Suggests:
     spdep,
     splancs,
     testthat,
-    verification
+    verification, 
+    TMB, 
+    RcppEigen
 Imports:
     digest,
     dplyr,
@@ -49,8 +51,6 @@ Imports:
     spacetime,
     sparseinv,
     stats,
-    TMB, 
-    RcppEigen,
     utils
 Additional_repositories: https://andrewzm.github.io/dggrids-repo, 
                          https://inla.r-inla-download.org/R/stable
