Fixed a small mistake I made with the SRE slots. Also added checks of the new slots to the .check_args functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,12 @@
 
 S3method(as.data.frame,Basis)
 S3method(as.data.frame,TensorP_Basis)
+export(.FRKTMB_fit)
 export(BAUs_from_points)
 export(Basis)
 export(EmptyTheme)
 export(Euclid_dist)
 export(FRK)
-export(FRKTMB_fit)
 export(FRKTMB_pred)
 export(LinePlotTheme)
 export(SRE)
