Added checks for k_Z and k_BAU (k_Z should be stored in M@data[[1]], and k_BAU is provided in the predict argument). Changed what we do with obs_fs == TRUE. Changed the type argument to allow for any combinations of link, mean, and response.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ importFrom(grDevices,chull)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,rbind.fill)
+importFrom(statmod,rinvgauss)
 importFrom(stats,.getXlevels)
 importFrom(stats,coefficients)
 importFrom(stats,dist)
