--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,8 +77,16 @@ importFrom(stats,model.extract)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,na.fail)
+importFrom(stats,nlminb)
 importFrom(stats,optim)
+importFrom(stats,pnorm)
+importFrom(stats,qnorm)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rgamma)
+importFrom(stats,rnbinom)
 importFrom(stats,rnorm)
+importFrom(stats,rpois)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,terms)
