--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ install:
 - Rscript -e 'install.packages("verification", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("covr", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("lintr", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("statmod", repos = "http://cran.rstudio.com")'
 
 
 
