Trying old release

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # Sample .travis.yml for R projects
 
 language: r
+r:
+  - oldrel
 group: deprecated-2017Q1
 warnings_are_errors: false
 sudo: required
