Added remove_BAUs and reverse_BAU_coords methods.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,9 @@ export(plane)
 export(predict)
 export(radial_basis)
 export(real_line)
+export(remove_BAUs)
 export(remove_basis)
+export(reverse_BAU_coords)
 export(show_basis)
 export(sphere)
 export(type)
@@ -45,6 +47,8 @@ exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
 exportMethods(predict)
+exportMethods(remove_BAUs)
+exportMethods(reverse_BAU_coords)
 import(Matrix)
 import(Rcpp)
 import(RcppEigen)
