Changed name of reverse_BAU_coords to reverse_spatial_coords.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,7 +39,7 @@ export(radial_basis)
 export(real_line)
 export(remove_BAUs)
 export(remove_basis)
-export(reverse_BAU_coords)
+export(reverse_spatial_coords)
 export(show_basis)
 export(sphere)
 export(type)
@@ -48,7 +48,7 @@ exportMethods("$<-")
 exportMethods("data.frame<-")
 exportMethods(predict)
 exportMethods(remove_BAUs)
-exportMethods(reverse_BAU_coords)
+exportMethods(reverse_spatial_coords)
 import(Matrix)
 import(Rcpp)
 import(RcppEigen)
