Added observed_BAUs and unobserved_BAUs methods, and removed the requirement for the std field when est_error = FALSE and the response is non-Gaussian.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(manifold)
 export(measure)
 export(nbasis)
 export(nres)
+export(observed_BAUs)
 export(opts_FRK)
 export(plane)
 export(predict)
@@ -43,12 +44,15 @@ export(reverse_spatial_coords)
 export(show_basis)
 export(sphere)
 export(type)
+export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(observed_BAUs)
 exportMethods(predict)
 exportMethods(remove_BAUs)
 exportMethods(reverse_spatial_coords)
+exportMethods(unobserved_BAUs)
 import(Matrix)
 import(Rcpp)
 import(RcppEigen)
