--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ importFrom(Hmisc,ceil)
 importFrom(Hmisc,roundPOSIXt)
 importFrom(Hmisc,truncPOSIXt)
 importFrom(Rcpp,cppFunction)
+importFrom(VCA,MPinv)
 importFrom(digest,digest)
 importFrom(grDevices,chull)
 importFrom(plyr,ddply)
