--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ install:
 - Rscript -e 'install.packages("covr", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("lintr", repos = "http://cran.rstudio.com")'
 - Rscript -e 'install.packages("statmod", repos = "http://cran.rstudio.com")'
+- Rscript -e 'install.packages("VCA", repos = "http://cran.rstudio.com")'
 
 
 
